# ProgramacionDeSistemas

./: CMakeLists.txt  README.md
lab2/ejercicio2/: tanque.cpp
lab2/ejercicio3/: CMakeLists.txt  main_ejercicio_3.cpp
lab2/ejercicio4/: carriage.cpp  carriage.h  main.cpp
laboratorio/lab2/ejercicio2/: CMakeLists.txt  main_ejercicio_2.cpp  tanque.cpp  tanque.h
laboratorio/lab2/ejercicio3/: atleta.cpp  atleta.h  carrera.cpp  carrera.h  main_ejercicio_3.cpp
laboratorio/lab2/ejercicio4/: CMakeLists.txt
practica3/ejercicio1/: main.cpp
practica3/ejercicio2/: main.cpp
practica3/ejercicio3/: CMakeLists.txt  main.cpp
practica3/ejercicio4/: CMakeLists.txt
practica3/ejercicio5/: CMakeLists.txt  generadorNumPrimos.cpp  generadorNumPrimos.h  main.cpp
practica3/ejercicio6/: CMakeLists.txt  main.cpp
practica4/ejercicio1/: main.cpp
practica4/ejercicio2/: CMakeLists.txt
practica4/ejercicio3/: main.cpp
practica4/ejercicio4/: CMakeLists.txt  complejo.cpp  departamento.h  main.cpp  piso.h
practica4/ejercicio5/: main.cpp
practica5/ejercicio1/: metodos.h
practica5/ejercicio10/: Jugador.h
practica5/ejercicio2/: CMakeLists.txt
practica5/ejercicio3/: Persona.h  main.cpp
practica5/ejercicio4/: CMakeLists.txt
practica5/ejercicio5/: main.cpp
practica5/ejercicio7/: CMakeLists.txt  metodos.cpp
practica5/ejercicio8/: metodos.h
practica5/ejercicio9/: CMakeLists.txt  metodos.cpp  metodos.h
practica6/ejercicio1/: CMakeLists.txt
practica6/ejercicio2/: main.cpp
practica6/ejercicio3/: main.cpp
practica6/ejercicio4/: CMakeLists.txt
(+36 files in other folders)
