cmake_minimum_required(VERSION 3.16)
project(PS)

set(CMAKE_CXX_STANDARD 14)

add_executable(PS main.cpp laboratorio/lab2/ejercicio2/tanque.cpp laboratorio/lab2/ejercicio2/tanque.h laboratorio/lab2/ejercicio2/main_ejercicio_2.cpp laboratorio/lab2/ejercicio3/atleta.cpp laboratorio/lab2/ejercicio3/atleta.h laboratorio/lab2/ejercicio3/main_ejercicio_3.cpp)